--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TvMazeApp</string>
+    <string name="main_activity_description">Find your favourite series or movies</string>
 </resources>
